<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Welcome5Fragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/layoutDots"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/image_welcome_1_2"/>
            <TextView
                android:id="@+id/ueberschrift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome5_ueberschrift"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Headline"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/welcome5_info"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5_Beispiele"
                            android:textColor="@color/black"
                            style="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5_Beispieletext"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5"
                            android:textColor="@color/black"
                            style="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5_text"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5_letzte_D"
                            android:textColor="@color/black"
                            style="@style/TextAppearance.AppCompat.Small"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/welcome5_letzte_Dtext"/>
                        <TextView
                            android:id="@+id/welcome5_letzte_Dtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/welcome5_info2"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dot_view1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/dot_view2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/dot_view3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/dot_view4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/dot_view5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/dot_view6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            android:textSize="35sp"
            android:textColor="@color/black"/>
    </LinearLayout>

</RelativeLayout>